//
// This file is part of arduino-cli.
//
// Copyright 2018 ARDUINO SA (http://www.arduino.cc/)
//
// This software is released under the GNU General Public License version 3,
// which covers the main part of arduino-cli.
// The terms of this license can be found at:
// https://www.gnu.org/licenses/gpl-3.0.en.html
//
// You can be released from the requirements of the above licenses by purchasing
// a commercial license. Buying such a license is mandatory if you want to modify or
// otherwise use the software for commercial activities involving the Arduino
// software without disclosing the source code of your own applications. To purchase
// a commercial license, send an email to license@arduino.cc.
//

syntax = "proto3";

package arduino;

option go_package = "github.com/arduino/arduino-cli/rpc";

import "common.proto";

message BoardDetailsReq {
  Instance instance = 1;
  string fqbn = 2;
}

message BoardDetailsResp {
  string name = 2;
  repeated ConfigOption config_options = 3;
  repeated RequiredTool required_tools = 4;
}

message ConfigOption {
  string option = 1;
  string option_label = 2;
  repeated ConfigValue values = 3;
}

message ConfigValue {
  string value = 1;
  string value_label = 2;
  bool selected = 3;
}

message RequiredTool {
  string name = 1;
  string version = 2;
  string packager = 3;
}
